flux-code-01/vws-app/vws-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vws-app
  labels:
    istio-injection: enabled
