flux-code-01/vws-app/vws-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vws-app
  namespace: vws-app
spec:
  #replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: vws-app
  template:
    metadata:
      labels:
        app: vws-app
        role: frontend
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: vwsnode
        image: welasco/nodejsportexhaustion
        #image: welasco/nodejssockethttpserver
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        readinessProbe:
            httpGet:
               path: /
               port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
        livenessProbe:
            httpGet:
                path: /
                port: 3000
                httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
