flux-code-01/vws-app/vws-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vws-app-service # vwsnode-service.default.svc.cluster.local
  namespace: vws-app
spec:
  type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: vws-app
