flux-code-01/vws-app/vws-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vws-app-ingress
  namespace: vws-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vwsapp.vwslab.com
    #secretName: vws-afd-secret-tls
  rules:
  - host: vwsapp.vwslab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vws-app-service
            port:
              number: 3000
